<resources>
    <string name="app_name">Conociendo Chile</string>
    <string name="chiile">chiile</string>
    <string name="conociendochile">conociendochile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="correo">Correo</string>
    <string name="todo">TODO</string>
    <string name="contrase_a">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="registrate">Registrate</string>

    <string-array name="Box_Menu">
        <item>Arica</item>
        <item>Iquique</item>
        <item>Antofagasta</item>
        <item>Copiapo</item>
        <item>La Serena</item>
        <item>Coquimbo</item>
        <item>Viña del Mar</item>
        <item>Valparaiso</item>
        <item>Santiago</item>
    </string-array>
    <string name="title_activity_maps_arica">MapsArica</string>

</resources>